== 0.1

* Added FlashResponder
* Added responders generators