@@ -1,3 +1,4 @@
 module Responders
-  autoload :FlashResponder, 'responders/flash_responder'
+  autoload :FlashResponder,     'responders/flash_responder'
+  autoload :HttpCacheResponder, 'responders/http_cache_responder'
 end
